@@ -40,7 +40,7 @@ if (!hasProperty('mainClass')) {
 mainClassName = 'tf.gpx.edit.main.GPXEditorManager'
 def appName='GPXEditor'
 group='tf.GPXEditor'
-version='5.2'
+version='5.3'
 
 repositories {
     mavenLocal() {
@@ -64,7 +64,8 @@ repositories {
 dependencies {
     // JavaFX11 explicit dependencies
 //    def javafx_version='11.0.2'
-    def javafx_version='14'
+//    def javafx_version='14'
+    def javafx_version='15.0.1'
     compile "org.openjfx:javafx-base:$javafx_version:$platform"
     compile "org.openjfx:javafx-graphics:$javafx_version:$platform"
     compile "org.openjfx:javafx-controls:$javafx_version:$platform"
@@ -74,7 +75,7 @@ dependencies {
     compile "org.openjfx:javafx-media:$javafx_version:$platform"
     
     // TFE, 20191209: our own helper library
-    compile 'tf.JavaHelper:JavaHelper:1.8'
+    compile 'tf.JavaHelper:JavaHelper:1.9'
 
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.12'
@@ -82,7 +83,7 @@ dependencies {
     compile 'commons-io:commons-io:2.6'
     compile 'org.apache.commons:commons-lang3:3.9'
     compile 'org.apache.commons:commons-collections4:4.4'
-    compile group: 'org.apache.commons', name: 'commons-text', version: '1.7'
+    compile group: 'org.apache.commons', name: 'commons-text', version: '1.8'
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     compile group: 'org.apache.commons', name: 'commons-csv', version: '1.7'
     compile 'me.himanshusoni.gpxparser:gpx-parser:1.12'
@@ -97,6 +98,7 @@ dependencies {
     compile 'uk.com.robust-it:cloning:1.9.12'
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
     compile group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.7.4'
+    compile group: 'org.jfxtras', name: 'jmetro', version: '11.6.14'
     
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.2'
 }
@@ -142,6 +144,7 @@ def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,ja
                 '--add-exports', 'javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED',
+                '--add-exports', 'javafx.base/com.sun.javafx.collections=ALL-UNNAMED',
                 '--add-opens', 'javafx.graphics/javafx.scene.layout=ALL-UNNAMED',
                 // TFE, 20200803: workaround for "WARNING: Illegal reflective access by com.rits.cloning.Cloner"
                 // https://github.com/x-stream/xstream/issues/101#issuecomment-667734663
@@ -159,7 +162,7 @@ run {
 //        jvmArgs = jvmArgs.plus('-agentpath:"C:/PROGRA~1/NetBeans-12.0/netbeans/profiler/lib/deployed/jdk16/windows-amd64/profilerinterface.dll=C:/PROGRA~1/NetBeans-12.0/netbeans/profiler/lib",5140')
         enableAssertions = true
     }
-//    args = ["P:\\Pictures\\Raw\\GPX\\Georgenstein_20200628.gpx"]
+//    args = ["C:\\WUTemp\\Feldmoching_20201025_Plan.gpx"]
 }
 
 test {
